# trading-ig

./: README.rst  pyproject.toml
.github/workflows/: compatibility-test.yml  integration-test.yml  no-extras-compatibility-test.yml  python-publish.yml  quick-test.yml  unit-test.yml
docs/source/: conf.py  faq.rst  index.rst
tests/: retry_test.py  test_integration.py
trading_ig/: rest.py  utils.py
