[tool.poetry]
name = "trading-ig"
version = "0.0.21"
description = "A lightweight Python wrapper for the IG Markets API"
authors = ["Femto Trader <femto.trader@gmail.com>", "Andy Geach <andy@bugorfeature.net>"]
maintainers = ["Andy Geach <andy@bugorfeature.net>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/ig-python/trading-ig"
repository = "https://github.com/ig-python/trading-ig"
documentation = "https://trading-ig.readthedocs.io/"
keywords = ["trading", "spread betting", "CFDs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: BSD License",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2"
pycryptodome = "^3.19"
requests-cache = "^1"
six = "^1"
lightstreamer-client-lib = "^1.0.3"

pandas = [
    { version = "^2.1", python = ">=3.9,<3.12", optional = true },
    { version = "<=2.0.3", python = "<3.9", optional = true },
]
munch = { version = "^4", optional = true }
tenacity = {version = "^8", optional = true}

[tool.poetry.extras]
pandas = ["pandas"]
munch = ["munch"]
tenacity = ["tenacity"]
sphinx = ["sphinx"]
docs = ["sphinx"]

[tool.poetry.group.dev.dependencies]
flake8 = "^6"
pytest = "^7"
responses = "^0"
coveralls = "^3"
sphinx-rtd-theme = {version = "^2", optional = true}
black = "23.11.0"

[tool.poetry.urls]
"Issues" = "https://github.com/ig-python/trading-ig/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
