[project]
name = "trading-ig"
version = "0.0.22"
description = "A lightweight Python wrapper for the IG Markets API"
authors = [
    { name = "Femto Trader", email = "femto.trader@gmail.com" },
    { name = "Andy Geach", email = "andy@bugorfeature.net" },
]
maintainers = [
    { name = "Andy Geach", email = "andy@bugorfeature.net" },
]
license = "BSD-3-Clause"
readme = "README.rst"
keywords = ["trading", "spread betting", "CFDs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: BSD License",
]
requires-python = ">=3.9"
dependencies = [
    "requests~=2.24",
    "pycryptodome~=3.9",
    "requests-cache",
    "six~=1.15",
    "lightstreamer-client-lib",
]

[project.optional-dependencies]
pandas = ["pandas<3"]
munch = ["munch~=4"]
tenacity = ["tenacity~=8"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "~7"
black = "~23.3"
responses = "~0.25"
pytest = "~8"
coveralls = "~3"
sphinx = "~7"
sphinx-rtd-theme = "~3"

[project.urls]
homepage = "https://github.com/ig-python/trading-ig"
repository = "https://github.com/ig-python/trading-ig"
documentation = "https://trading-ig.readthedocs.io/"
"Issues" = "https://github.com/ig-python/trading-ig/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
